--- a/notebooks/ecommerce_behaviour/_4_1_ecom_eval_DT.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_1_ecom_eval_DT.ipynb
@@ -1455,6 +1455,10 @@
     "We aim to achieve the minimum number of false positives while maintaining a high number of true positives. This enable us to effectively target customers who are likely to purchase (Tru positives). And This approach also helps reduce the budget spent on users we believed would buy but ultimately do not (False Positives). We tested three Gini values: 2, 6, 12 and 16. The Gini value of 6 provided the lowest number of false positives with a am moderate level of true positives, resulting in the high precision while still maintaining a high recall score.\n",
     "\n",
     "\n",
+    "Dataset used:\n",
+    "- Complete dataset from balancing step was used.\n",
+    "\n",
+    "\n",
     "Precision/recall/ f2 study:\n",
     "- Precision DT best with entropy and d=6\n",
     "- Precision F2 best with entropy and d=6\n",
@@ -1489,7 +1493,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extended analysis:\n",
+    "## Extended analysis\n",
     "\n",
     "- Several Gini values were tested for both precision and F2 scores, with the best results for both models achieved using entropy and Gini = 6. This Gini value produced the lowest number of false positives and a moderate level of true positives. Comparing the best performance of precision and F2, the highest precision was 29%, resulting in fewer false positives than the F2 model, while maintaining a high recall of 47%. Despite the F2 model showing higher recall at 66%, the best balance between false positives and true positives was obtained with the precision model.\n",
     "\n",
@@ -1504,7 +1508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Short analysis for the report:\n",
+    "## Short analysis for the report:\n",
     "- Testing various Gini values revealed that Gini = 6 yielded the best precision (29%) and F2 scores, with fewer false positives and a moderate number of true positives. Key variables included day_of_week_sin and activity_in_session. Both models showed overfitting from node 9. The precision and f2 tree, both have the same depth of 6, but precision tree is preferred due to its higher combined score of precision and recall."
    ]
   },
