--- a/notebooks/ecommerce_behaviour/_4_1_ecom_eval_NB.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_1_ecom_eval_NB.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -167,34 +167,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "235411\n",
-      "284300\n",
-      "70624\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.shape[0])\n",
-    "print(train.shape[0])\n",
-    "print(test.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -203,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,12 +254,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## recall evaluation"
+    "# recall "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## compare params recall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -305,13 +284,20 @@
     "if evaluate==True:\n",
     "    \n",
     "    best_model_recall, recall_params = naive_Bayes_study(trnX, trnY, tstX, tstY, metric='recall',file_tag=file_tag)\n",
-    "    savefig(f'images/{file_tag}_dt_recall_study.png')\n",
+    "    savefig(f'images/{file_tag}_nb_recall_study.png')\n",
     "    show()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## evaluate recall"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +328,7 @@
     "figure()\n",
     "\n",
     "plot_evaluation_results(recall_params, trnY, prd_trn, tstY, prd_tst, labels, file_tag=file_tag)\n",
-    "savefig(f'images/{file_tag}_dt_{recall_params[\"name\"]}_best_{recall_params[\"metric\"]}_eval.png')\n",
+    "savefig(f'images/{file_tag}_nb_{recall_params[\"name\"]}_best_{recall_params[\"metric\"]}_eval.png')\n",
     "show()"
    ]
   },
@@ -350,12 +336,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## evaluate precision"
+    "# precision"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## compare params precision"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -371,13 +364,13 @@
    ],
    "source": [
     "best_model_prec, prec_params = naive_Bayes_study(trnX, trnY, tstX, tstY, metric='precision',file_tag=file_tag)\n",
-    "savefig(f'images/{file_tag}_dt_precision_study.png')\n",
+    "savefig(f'images/{file_tag}_nb_precision_study.png')\n",
     "show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -479,12 +472,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## evaluate f2"
+    "# f2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## compare params f2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +500,7 @@
    ],
    "source": [
     "best_model_f2, f2_params = naive_Bayes_study(trnX, trnY, tstX, tstY, metric='f2',file_tag=file_tag)\n",
-    "savefig(f'images/{file_tag}_dt_accuracy_study.png')\n",
+    "savefig(f'images/{file_tag}_nb_f2_study.png')\n",
     "show()"
    ]
   },
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluate for best model - NB"
+    "## evaluate f2"
    ]
   },
   {
@@ -528,16 +528,17 @@
     }
    ],
    "source": [
-    "if evaluate==True:\n",
-    "\n",
-    "    best_model, params = naive_Bayes_study(trnX, trnY, tstX, tstY, metric=target_metric)\n",
-    "    savefig(f'images/{file_tag}_dt_{target_metric}_study.png')\n",
-    "    show()"
+    "prd_trn: array = best_model_f2.predict(trnX)\n",
+    "prd_tst: array = best_model_f2.predict(tstX)\n",
+    "figure()\n",
+    "plot_evaluation_results(f2_params, trnY, prd_trn, tstY, prd_tst, labels,file_tag=file_tag)\n",
+    "savefig(f'images/{file_tag}_nb_{f2_params[\"name\"]}_best_{f2_params[\"metric\"]}_eval.png')\n",
+    "show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -561,11 +562,11 @@
     }
    ],
    "source": [
-    "prd_trn: array = best_model.predict(trnX)\n",
-    "prd_tst: array = best_model.predict(tstX)\n",
+    "prd_trn: array = best_model_f2.predict(trnX)\n",
+    "prd_tst: array = best_model_f2.predict(tstX)\n",
     "figure()\n",
     "plot_evaluation_results(f2_params, trnY, prd_trn, tstY, prd_tst, labels,file_tag=file_tag)\n",
-    "savefig(f'images/{file_tag}_dt_{f2_params[\"name\"]}_best_{f2_params[\"metric\"]}_eval.png')\n",
+    "savefig(f'images/{file_tag}_nb_{f2_params[\"name\"]}_best_{f2_params[\"metric\"]}_eval.png')\n",
     "show()"
    ]
   },
@@ -644,6 +645,57 @@
    "source": [
     "# Analysis\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Precision/recall/ f2 study:\n",
+    "- recall KNN best with K=5\n",
+    "- Precision KNN best with  K=5\n",
+    "- f2 KNN best with K=3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset used:\n",
+    "- Complete dataset from balancing step was used.\n",
+    "\n",
+    "Estimators:\n",
+    "- There's 3 estimators available in NB:\n",
+    "    - GaussianNB\n",
+    "    - MultinomialNB\n",
+    "    - BernoulliNB\n",
+    "We didn't use the MultinomialNB, because this estimator doesn't work over variables with negative values, and in our dataset we have variables with negative values like the time cols: time_of_day_sin, time_of_day_cos,day_of_week_sin, day_of_week_cos,\thour_sin, hour_cos, min_sin and min_cos.\n",
+    "\n",
+    "\n",
+    "Best params:\n",
+    "- I our dataset, using the precision measure, the best model found was the one using Bernoulli (29 vs 27). For f2, the the best model found was also the one using Bernoulli (58 vs 56), making Bernoulli the best estimator for our dataset.\n",
+    "- The best model for f2, tem uma precision de 23%, sendo um dos modelos menos eficientes do que estudámos para o nosso dataset. Estem odelo teve tmabém um recall de 69%. Estes dois resultados significam que temos um numero até bastante elevado de true positive, mas no entanto temos um numero muito elevado de falsos positivos que é precisamente aquilo que nao queremos.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extended analysis\n",
+    "\n",
+    "- There are three available estimators in Naive Bayes: GaussianNB, MultinomialNB, and BernoulliNB. We didn’t use MultinomialNB because it doesn’t handle variables with negative values. Our dataset includes negative values in time-based features such as time_of_day_sin, time_of_day_cos, day_of_week_sin, day_of_week_cos, hour_sin, hour_cos, min_sin, and min_cos.\n",
+    "\n",
+    "- For our dataset, using precision as the measure, the Bernoulli model performed best (29% vs. 27% in other models). For F2, Bernoulli was also the top performer (58% vs. 56%). This makes Bernoulli the most suitable estimator for our data.\n",
+    "\n",
+    "- The best F2 model achieved a precision of 23%, making it one of the less efficient models for our dataset, with a recall of 69%. This shows a relatively high number of true positives but also a high number of false positives, which we aim to minimize."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Short analysis for the report\n",
+    "- BernoulliNB was best for our dataset, outperforming Gaussian in precision (29%) and F2 (58%). The top F2 model had a score of 23% for precision and 69% forrecall, with many true positives but also too many false positives."
    ]
   },
   {
