--- a/notebooks/ecommerce_behaviour/_4_5_ecom_eval_RForests.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_5_ecom_eval_RForests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,13 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "dslabs_functions lodaded\n",
       "data_functions loaded\n"
      ]
     }
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -837,18 +838,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Analysis\n",
-    "\n",
-    "- Traffic source and medium with higher importance\n",
-    "- overfitting from level 3\n"
+    "# Analysis"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Precision/recall/ f2 study:\n",
+    "- recall KNN best with K=5\n",
+    "- Precision KNN best with  K=5\n",
+    "- f2 KNN best with K=3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dataset used:\n",
+    "- Sample from balancing dataset was used, as running the evaluation on the with complete balancing dataset was too time-consuming.\n",
+    "\n",
+    "Precision/recall/ f2 study:\n",
+    "- É percetivel, que com mais k vizinhos,a performance do melhor f2 e precision decresce, o que significa que para o nosso dataset, k mais pequenos tem melhor score em precision e recall. No caso de f2, o melhor f2 foi obtido com k=5., com 52 accuracy, 57 de recall e 25 de precision. Comparando com o best precision model, obtido com um k=5,n este ultimo obtivemos maior accuracy (%56) e maior precision, 26%. Isto resulta em que no best precision, temos mais ou menos o mesmo numero de true positives que no best f2, mas temos bem menos falso positivos. como o nosso objetivo é sempre minimizar falsos positivos, mantendo um numero elevado de true positives, achamos que o besft precision é mais adequado para o nosso dataset.\n",
+    "\n",
+    "Overfitting:\n",
+    "- Para o melhor f2, o modelo es´ta inicialmente em overfitting uma vez que otrain está a descer e o test a subir, até k=5. Depois disso as curvas parecem convergir pararelemanet para o train e testes mantendo-se constante a partir dai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extended analysis\n",
+    "\n",
+    "- Precision/Recall/F2 Analysis:\n",
+    "As we observe, with an increasing number of neighbors (k), performance metrics for precision and F2 tend to decrease, indicating that smaller k values yield better precision and recall scores on our dataset. The highest F2 score was achieved with k = 5 giving 52% accuracy, 57% recall, and 25% precision. In comparison, the best precision model, also at k=5, achieved a higher accuracy of 56% and a precision of 26%. This results in a similar number of true positives for both models, but with significantly fewer false positives in the best precision model. Since our goal is to minimize false positives while maintaining a high number of true positives, we believe the best precision model is more suited for our dataset.\n",
+    "\n",
+    "- Overfitting:\n",
+    "For the optimal F2 model, we observed initial overfitting as the training performance decreased and the test performance increased up to k=5. After this point, the train and test curves converged and stabilized, indicating balanced performance.\n",
+    "\n",
+    "- Comparing the performance with other models:\n",
+    "The KNN model’s precision was low (26%), which was expected since scaling and removal of redundant features weren’t applied in data preparation. KNN typically performs better with scaled data and selected relevant features, so its performance in this setup was limited."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Short analysis for the report\n",
+    "- With increasing k, F2 and precision decrease. Optimal F2 (k=5) had 52% accuracy, 57% recall, 25% precision. Best precision model (k=5) gives 56% accuracy, 26% precision, fewer false positives, suiting our goals."
+   ]
   },
   {
    "cell_type": "code",
