francis_clean_ecom_notebook
francis_clean_ecom_notebook

--- a/notebooks/ecommerce_behaviour/_4_4_ecom_eval_neural_networks.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_4_ecom_eval_neural_networks.ipynb
@@ -1039,6 +1039,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Logic for evaluation:\n",
+    "- Our goal is to maximize true positives (high recall) while minimizing false positives (high precision). This approach enables us to effectively identify customers who are likely to purchase, focusing our marketing efforts on those most likely to convert. By reducing false positives, we also avoid unnecessary spending on campaigns targeted at users who are unlikely to buy.\n",
+    "\n",
+    "- The F2 score, which places more emphasis on recall than precision, is the best metric to evaluate this balance. During the evaluation phase, we will assess model performance primarily using the F2 score, analyzing precision and recall together. Our objective is to achieve a balanced score that allows us to identify as many potential buyers as possible, while keeping false positives low to optimize our marketing budget.\n",
+    "\n",
     "Dataset used:\n",
     "- Sample from balancing dataset was used, as running the evaluation on the with complete balancing dataset was too time-consuming.\n",
     "\n",
@@ -1075,6 +1080,14 @@
    "source": [
     "## Short analysis for the report\n",
     "- Testing showed that F2 optimization produced a high-recall but low-precision model, unsuitable for our dataset. Precision-optimized model (constant, 0.0005, 50) performed better and is recommended. No overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Short logic evaluation text:\n",
+    "- Our goal is to maximize true positives (high recall) and minimize false positives (high precision), effectively targeting likely buyers and reducing wasted marketing spend. The F2 score, emphasizing recall, will be our primary evaluation metric, helping us strike a balance between precision and recall to optimize campaign efficiency"
    ]
   }
  ],
