--- a/notebooks/ecommerce_behaviour/_4_5_ecom_eval_RForests.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_5_ecom_eval_RForests.ipynb
@@ -589,13 +589,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "for max_eval=1000 and lag=50"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -1114,20 +1107,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Analysis\n",
     "\n",
     "\n",
-    "We aim to achieve the minimum number of false positives while maintaining a high number of true positives. This enable us to effectively target customers who are likely to purchase (Tru positives). And This approach also helps reduce the budget spent on users we believed would buy but ultimately do not (False Positives).\n",
+    "Logic for evaluation:\n",
+    "- Our goal is to maximize true positives (high recall) while minimizing false positives (high precision). This approach enables us to effectively identify customers who are likely to purchase, focusing our marketing efforts on those most likely to convert. By reducing false positives, we also avoid unnecessary spending on campaigns targeted at users who are unlikely to buy.\n",
+    "\n",
+    "- The F2 score, which places more emphasis on recall than precision, is the best metric to evaluate this balance. During the evaluation phase, we will assess model performance primarily using the F2 score, analyzing precision and recall together. Our objective is to achieve a balanced score that allows us to identify as many potential buyers as possible, while keeping false positives low to optimize our marketing budget.\n",
     "\n",
     "Dataset used:\n",
     "- Sample from balancing dataset was used, as running the evaluation on the with complete balancing dataset was too time-consuming.\n",
@@ -1198,6 +1187,14 @@
    "source": [
     "## Short analysis for the report:\n",
     "- Best F2 model (trees=600; d=2) had 62% recall, 28% precision. Precision model (trees=500; d=7) achieved 30% precision, 65% accuracy. Precision model suits our dataset, balancing true and false positives better. No overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Short logic evaluation text:\n",
+    "- Our goal is to maximize true positives (high recall) and minimize false positives (high precision), effectively targeting likely buyers and reducing wasted marketing spend. The F2 score, emphasizing recall, will be our primary evaluation metric, helping us strike a balance between precision and recall to optimize campaign efficiency"
    ]
   },
   {
