--- a/notebooks/ecommerce_behaviour/_4_6_ecom_eval_Gradient_Boost.ipynb
+++ b/notebooks/ecommerce_behaviour/_4_6_ecom_eval_Gradient_Boost.ipynb
@@ -348,6 +348,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## f2 study"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -403,48 +410,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## f2 study"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##max_trees_eval=3000\n",
-    "##max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##figure()\n",
-    "##\n",
-    "##\n",
-    "##best_model_f2, f2_params = gradient_boosting_study(\n",
-    "##trnX,\n",
-    "##trnY,\n",
-    "##tstX,\n",
-    "##tstY,\n",
-    "##nr_max_trees=max_trees_eval,\n",
-    "##lag=max_trees_eval_lag,\n",
-    "##metric='f2',\n",
-    "##file_tag=file_tag\n",
-    "##)\n",
-    "##\n",
-    "##savefig(f'images/{file_tag}_GB_{f2_params['metric']}_study.png')\n",
-    "##show()\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## f2 Best Model Performance"
    ]
   },
@@ -488,28 +453,6 @@
     "plot_evaluation_results(f2_params, trnY, prd_trn, tstY, prd_tst, labels, file_tag=file_tag)\n",
     "savefig(f'images/{file_tag}_GB_{f2_params[\"name\"]}_best_{f2_params[\"metric\"]}_eval.png')\n",
     "show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "max_trees_eval=3000\n",
-    "max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##prd_trn: array = best_model_f2.predict(trnX)\n",
-    "##prd_tst: array = best_model_f2.predict(tstX)\n",
-    "##figure()\n",
-    "##plot_evaluation_results(f2_params, trnY, prd_trn, tstY, prd_tst, labels, file_tag=file_tag)\n",
-    "##savefig(f'images/{file_tag}_GB_{f2_params[\"name\"]}_best_{f2_params[\"metric\"]}_eval.png')\n",
-    "##show()"
    ]
   },
   {
@@ -586,43 +529,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##from numpy import std, argsort\n",
-    "##from dslabs_functions import plot_horizontal_bar_chart\n",
-    "##\n",
-    "##trees_importances: list[float] = []\n",
-    "##for lst_trees in best_model_f2.estimators_:\n",
-    "##    for tree in lst_trees:\n",
-    "##        trees_importances.append(tree.feature_importances_)\n",
-    "##\n",
-    "##stdevs: list[float] = list(std(trees_importances, axis=0))\n",
-    "##importances = best_model_f2.feature_importances_\n",
-    "##indices: list[int] = argsort(importances)[::-1]\n",
-    "##elems: list[str] = []\n",
-    "##imp_values: list[float] = []\n",
-    "##for f in range(len(vars)):\n",
-    "##    elems += [vars[indices[f]]]\n",
-    "##    imp_values.append(importances[indices[f]])\n",
-    "##    print(f\"{f+1}. {elems[f]} ({importances[indices[f]]})\")\n",
-    "##\n",
-    "##figure()\n",
-    "##plot_horizontal_bar_chart(\n",
-    "##    elems,\n",
-    "##    imp_values,\n",
-    "##    error=stdevs,\n",
-    "##    title=f\"{file_tag} GB variables importance\",\n",
-    "##    xlabel=\"importance\",\n",
-    "##    ylabel=\"variables\",\n",
-    "##    percentage=True,\n",
-    "##)\n",
-    "##savefig(f\"images/{file_tag}_gb_{f2_params[\"metric\"]}_vars_ranking.png\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -675,41 +581,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "##d_max: int = f2_params[\"params\"][0]\n",
-    "##lr: float = f2_params[\"params\"][1]\n",
-    "##nr_estimators: list[int] = [i for i in range(2, max_trees_eval, max_trees_eval_lag)]\n",
-    "##\n",
-    "##y_tst_values: list[float] = []\n",
-    "##y_trn_values: list[float] = []\n",
-    "##eval_metric: str = f2_params['metric']\n",
-    "##\n",
-    "##for n in nr_estimators:\n",
-    "##    clf = GradientBoostingClassifier(n_estimators=n, max_depth=d_max, learning_rate=lr)\n",
-    "##    clf.fit(trnX, trnY)\n",
-    "##    prd_tst_Y: array = clf.predict(tstX)\n",
-    "##    prd_trn_Y: array = clf.predict(trnX)\n",
-    "##    y_tst_values.append(CLASS_EVAL_METRICS[eval_metric](tstY, prd_tst_Y))\n",
-    "##    y_trn_values.append(CLASS_EVAL_METRICS[eval_metric](trnY, prd_trn_Y))\n",
-    "##\n",
-    "##figure()\n",
-    "##plot_multiline_chart(\n",
-    "##    nr_estimators,\n",
-    "##    {\"Train\": y_trn_values, \"Test\": y_tst_values},\n",
-    "##    title=f\"{file_tag} GB overfitting study for d={d_max} and lr={lr}\",\n",
-    "##    xlabel=\"nr_estimators\",\n",
-    "##    ylabel=str(eval_metric),\n",
-    "##    percentage=True,\n",
-    "##)\n",
-    "##savefig(f\"images/{file_tag}_gb_{eval_metric}_overfitting.png\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -724,6 +595,13 @@
    "source": [
     "max_trees_eval= 700\n",
     "max_trees_eval_lag=100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## precision study"
    ]
   },
   {
@@ -776,48 +654,6 @@
     "\n",
     "savefig(f'images/{file_tag}_GB_{prec_params['metric']}_study.png')\n",
     "show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##max_trees_eval=3000\n",
-    "##max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## precision study"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "##figure()\n",
-    "##\n",
-    "##\n",
-    "##best_model_prec, prec_params = gradient_boosting_study(\n",
-    "##trnX,\n",
-    "##trnY,\n",
-    "##tstX,\n",
-    "##tstY,\n",
-    "##nr_max_trees=max_trees_eval,\n",
-    "##lag=max_trees_eval_lag,\n",
-    "##metric='f2',\n",
-    "##file_tag=file_tag\n",
-    "##\n",
-    "##)\n",
-    "##\n",
-    "##savefig(f'images/{file_tag}_GB_{prec_params['metric']}_study.png')\n",
-    "##show()"
    ]
   },
   {
@@ -875,20 +711,6 @@
    "source": [
     "max_trees_eval=3000\n",
     "max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#prd_trn: array = best_model_prec.predict(trnX)\n",
-    "#prd_tst: array = best_model_prec.predict(tstX)\n",
-    "#figure()\n",
-    "#plot_evaluation_results(prec_params, trnY, prd_trn, tstY, prd_tst, labels,file_tag=file_tag)\n",
-    "#savefig(f'images/{file_tag}_GB_{prec_params[\"name\"]}_best_{prec_params[\"metric\"]}_eval.png')\n",
-    "#show()"
    ]
   },
   {
@@ -976,51 +798,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "max_trees_eval=3000\n",
-    "max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#from numpy import std, argsort\n",
-    "#from dslabs_functions import plot_horizontal_bar_chart\n",
-    "#\n",
-    "#trees_importances: list[float] = []\n",
-    "#for lst_trees in best_model_prec.estimators_:\n",
-    "#    for tree in lst_trees:\n",
-    "#        trees_importances.append(tree.feature_importances_)\n",
-    "#\n",
-    "#stdevs: list[float] = list(std(trees_importances, axis=0))\n",
-    "#importances = best_model_prec.feature_importances_\n",
-    "#indices: list[int] = argsort(importances)[::-1]\n",
-    "#elems: list[str] = []\n",
-    "#imp_values: list[float] = []\n",
-    "#for f in range(len(vars)):\n",
-    "#    elems += [vars[indices[f]]]\n",
-    "#    imp_values.append(importances[indices[f]])\n",
-    "#    print(f\"{f+1}. {elems[f]} ({importances[indices[f]]})\")\n",
-    "#\n",
-    "#figure()\n",
-    "#plot_horizontal_bar_chart(\n",
-    "#    elems,\n",
-    "#    imp_values,\n",
-    "#    error=stdevs,\n",
-    "#    title=f\"{file_tag} GB variables importance\",\n",
-    "#    xlabel=\"importance\",\n",
-    "#    ylabel=\"variables\",\n",
-    "#    percentage=True,\n",
-    "#)\n",
-    "#savefig(f\"images/{file_tag}_gb_{prec_params[\"metric\"]}_vars_ranking.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## precision overfitting"
    ]
   },
@@ -1082,53 +859,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "max_trees_eval=3000\n",
-    "max_trees_eval_lag=300"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "#d_max: int = prec_params[\"params\"][0]\n",
-    "#lr: float = prec_params[\"params\"][1]\n",
-    "#nr_estimators: list[int] = [i for i in range(2, max_trees_eval, max_trees_eval_lag)]\n",
-    "#\n",
-    "#y_tst_values: list[float] = []\n",
-    "#y_trn_values: list[float] = []\n",
-    "#eval_metric: str = prec_params['metric']\n",
-    "#\n",
-    "#for n in nr_estimators:\n",
-    "#    clf = GradientBoostingClassifier(n_estimators=n, max_depth=d_max, learning_rate=lr)\n",
-    "#    clf.fit(trnX, trnY)\n",
-    "#    prd_tst_Y: array = clf.predict(tstX)\n",
-    "#    prd_trn_Y: array = clf.predict(trnX)\n",
-    "#    y_tst_values.append(CLASS_EVAL_METRICS[eval_metric](tstY, prd_tst_Y))\n",
-    "#    y_trn_values.append(CLASS_EVAL_METRICS[eval_metric](trnY, prd_trn_Y))\n",
-    "#\n",
-    "#figure()\n",
-    "#plot_multiline_chart(\n",
-    "#    nr_estimators,\n",
-    "#    {\"Train\": y_trn_values, \"Test\": y_tst_values},\n",
-    "#    title=f\"{file_tag} GB overfitting study for d={d_max} and lr={lr}\",\n",
-    "#    xlabel=\"nr_estimators\",\n",
-    "#    ylabel=str(eval_metric),\n",
-    "#    percentage=True,\n",
-    "#)\n",
-    "#savefig(f\"images/{file_tag}_gb_{eval_metric}_overfitting.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Analysis\n",
     "\n",
     "\n",
-    "We aim to achieve the minimum number of false positives while maintaining a high number of true positives. This enable us to effectively target customers who are likely to purchase (Tru positives). And This approach also helps reduce the budget spent on users we believed would buy but ultimately do not (False Positives).\n",
+    "Logic for evaluation:\n",
+    "- Our goal is to maximize true positives (high recall) while minimizing false positives (high precision). This approach enables us to effectively identify customers who are likely to purchase, focusing our marketing efforts on those most likely to convert. By reducing false positives, we also avoid unnecessary spending on campaigns targeted at users who are unlikely to buy.\n",
+    "\n",
+    "- The F2 score, which places more emphasis on recall than precision, is the best metric to evaluate this balance. During the evaluation phase, we will assess model performance primarily using the F2 score, analyzing precision and recall together. Our objective is to achieve a balanced score that allows us to identify as many potential buyers as possible, while keeping false positives low to optimize our marketing budget.\n",
     "\n",
     "Dataset used:\n",
     "- Sample from balancing dataset was used, as running the evaluation on the with complete balancing dataset was too time-consuming.\n",
@@ -1197,7 +934,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Short logic evaluation text:\n",
+    "- Our goal is to maximize true positives (high recall) and minimize false positives (high precision), effectively targeting likely buyers and reducing wasted marketing spend. The F2 score, emphasizing recall, will be our primary evaluation metric, helping us strike a balance between precision and recall to optimize campaign efficiency"
+   ]
   }
  ],
  "metadata": {
