added pca resources

--- a/non_supervised_analysis/notebooks/dataset_3/2_instacart_clustering.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/2_instacart_clustering.ipynb
@@ -12,7 +12,14 @@
     "\n",
     "\n",
     "- what are the top aisle purchase clusters?\n",
-    "- what are the most common timeframe order time clusters (order_dow, order_hour_of_day,days_since_prior_order and weeks_since_prior_order) ?"
+    "- what are the most common timeframe order time clusters (order_dow, order_hour_of_day,days_since_prior_order and weeks_since_prior_order) ?\n",
+    "\n",
+    "PCA Resources\n",
+    "- https://www.kaggle.com/code/asindico/customer-segments-with-pca\n",
+    "- https://www.datacamp.com/tutorial/principal-component-analysis-in-python\n",
+    "- https://www.youtube.com/watch?v=8klqIM9UvAc\n",
+    "- https://www.youtube.com/watch?v=FD4DeN81ODY\n",
+    "- https://www.youtube.com/watch?v=HMOI_lkzW08"
    ]
   },
   {
