--- a/non_supervised_analysis/templates/G02_notebook.ipynb
+++ b/non_supervised_analysis/templates/G02_notebook.ipynb
@@ -11,9 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**GROUP XX**\n",
-    "- name, number, e-mail\n",
-    "- name, number, e-mail"
+    "**GROUP 02**\n",
+    "- Eugenia Cozma, 13016, eugeniacozma26@gmail.com\n",
+    "- Francisco Lourenço, number, e-mail\n",
+    "- João Valente, number, email"
    ]
   },
   {
