switch clustering to user order behaviour focus

--- a/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_3/1_instacart_data_profiling.ipynb
@@ -904,7 +904,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## numeric variables distribution breakdown"
+    "## numeric variables distribution breakdown\n",
+    "- add_to_cart_order, order number and weeks since last order should be truncated or removed"
    ]
   },
   {
