--- a/non_supervised_analysis/notebooks/dataset_2/3_clustering.ipynb
+++ b/non_supervised_analysis/notebooks/dataset_2/3_clustering.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "array([1, 1, 2, ..., 1, 1, 1])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "array([0, 0, 2, ..., 0, 0, 0], dtype=int32)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,22 +326,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 2, ..., 2, 2, 2])"
+       "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hier_algo = cluster.AgglomerativeClustering(n_clusters=3, metric=sim_affinity, linkage='average')\n",
+    "hier_algo = cluster.AgglomerativeClustering(n_clusters=3, metric='euclidean', linkage='average')\n",
     "hier_model = hier_algo.fit(data_copy)\n",
     "hier_model.labels_\n"
    ]
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
